[gd_scene load_steps=7 format=2]

[ext_resource path="res://Src/Gui/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Gui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Src/Mechs/ParallaxBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Src/Gui/Label.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Gui/Store.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Music and sfx/Boss Theme.ogg" type="AudioStream" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.0
margin_top = -29.5
margin_right = 35.0
margin_bottom = 29.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_right = 70.0
margin_bottom = 17.0
text = "PLAY"
next_scene = "res://Src/World/World.tscn"

[node name="Store" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 21.0
margin_right = 70.0
margin_bottom = 38.0
text = "STORE"

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 42.0
margin_right = 70.0
margin_bottom = 59.0
text = "QUIT"

[node name="Store" parent="." instance=ExtResource( 5 )]
visible = false

[node name="ParallaxBackground" parent="." instance=ExtResource( 3 )]

[node name="BackButton" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = -1.19209e-07
margin_top = 139.0
margin_right = 44.0
margin_bottom = 156.0
rect_scale = Vector2( 0.56, 0.64 )
text = "BACK"

[node name="ScoreLabel" parent="." instance=ExtResource( 4 )]
margin_left = -297.0
margin_top = 13.0
margin_right = -233.0
margin_bottom = 33.0
rect_scale = Vector2( 0.6, 0.6 )
text = "High Score:"

[node name="ScoreLabel2" parent="." instance=ExtResource( 4 )]
margin_left = -250.0
margin_top = 14.0
margin_right = -186.0
margin_bottom = 34.0
rect_scale = Vector2( 0.6, 0.6 )
align = 0

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
autoplay = true

[connection signal="button_up" from="VBoxContainer/Store" to="." method="_on_Store_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
[connection signal="button_up" from="BackButton" to="." method="_on_BackButton_button_up"]
